# FarmVerse

./: .gitignore  .gitmodules  CICD_SETUP_COMPLETE.md  test_sleep_command.py
.github/: CICD_README.md
.github/workflows/: ci.yml  m5stack_qemu_smoke.yml  test_coverage.yml  unit_tests.yml
.serena/: project.yml
devices/ina226_power_monitor/: .gitignore  Cargo.toml  README.md  build.rs  cfg.toml  cfg.toml.template  sdkconfig.defaults
devices/ina226_power_monitor/.cargo/: config.toml
devices/ina226_power_monitor/crates/ina226/: Cargo.toml
devices/ina226_power_monitor/crates/ina226/src/: lib.rs
devices/ina226_power_monitor/crates/power_monitor_core/: Cargo.toml
devices/ina226_power_monitor/crates/power_monitor_core/src/: lib.rs
devices/ina226_power_monitor/docs/: REQUIREMENTS_JA.md  TEST_PLAN_JA.md
devices/ina226_power_monitor/src/: config.rs  lib.rs  main.rs  model.rs  monitor.rs  monitor_core.rs  web.rs
devices/m5stack_unit_cam/: .gitignore  Cargo.toml  README.md  SCCB_STANDBY_IMPLEMENTATION_TASKS.md  cfg.toml.template  partitions.csv  qemu_unittest.sh
devices/m5stack_unit_cam/.cargo/: config.toml
devices/m5stack_unit_cam/host_frame_tests/: Cargo.toml
devices/m5stack_unit_cam/host_frame_tests/src/: lib.rs
devices/m5stack_unit_cam/src/: app_controller.rs  config.rs  data_collector.rs  lib.rs  mac_address.rs  main.rs  network_manager.rs  rtc_manager.rs
devices/m5stack_unit_cam/src/communication/: mod.rs  network_manager.rs
devices/m5stack_unit_cam/src/communication/esp_now/: frame.rs  frame_codec.rs  mod.rs  receiver.rs  receiver_new.rs  receiver_old.rs  retry_policy.rs  sender.rs  sender_new.rs  sender_old.rs
devices/m5stack_unit_cam/src/core/: app_controller.rs  capture_policy.rs  config.rs  config_validation.rs  data_prep.rs  data_service.rs  domain_logic.rs  mod.rs
devices/m5stack_unit_cam/src/esp_now/: frame.rs  sender.rs
devices/m5stack_unit_cam/src/hardware/: mod.rs  pins.rs  voltage_sensor.rs
devices/m5stack_unit_cam/src/hardware/camera/: controller.rs  mod.rs  ov2640_sequence.rs  ov3660_sequence.rs
devices/m5stack_unit_cam/src/hardware/led/: status_led.rs
devices/m5stack_unit_cam/src/power/: mod.rs
devices/m5stack_unit_cam/src/power/sleep/: deep_sleep.rs  mod.rs
devices/m5stack_unit_cam/src/sleep/: deep_sleep.rs
devices/xiao_esp32s3_sense/: .gitignore  BATTERY_OPT_REPORT.md  Cargo.toml  HOST_UNIT_TESTS.md  README.md  TESTING_DOCS.md  cfg.toml.template  partitions.csv  run_tests.sh  sdkconfig.defaults
devices/xiao_esp32s3_sense/.github/: copilot-instructions.md
devices/xiao_esp32s3_sense/src/: config.rs  lib.rs  mac_address.rs  main.rs
devices/xiao_esp32s3_sense/tests/: QUICKSTART.md  README.md  unit_test_example.rs
devices/xiao_esp32s3_temp_sensor/: .gitignore  Cargo.toml  README.md  cfg.toml.template  sdkconfig.defaults
devices/xiao_esp32s3_temp_sensor/.cargo/: config.toml
devices/xiao_esp32s3_temp_sensor/crates/temp_sensor_core/: Cargo.toml
devices/xiao_esp32s3_temp_sensor/crates/temp_sensor_core/src/: lib.rs
devices/xiao_esp32s3_temp_sensor/docs/: design.md  ina226_samples_esp32s3_tempsensor.csv  ina226_samples_esp32s3_tempsensor_2.csv
devices/xiao_esp32s3_temp_sensor/src/: lib.rs  main.rs
devices/xiao_esp32s3_temp_sensor/src/utils/: mac_utils.rs  mod.rs  payload.rs  recalibration.rs
docs/1_CultivationDiary/: README.md
docs/1_CultivationDiary/basic_design/: 01_基本設計計画書.md  02_ペルソナ.md  03_ユースケース.md  04_カスタマージャーニー.md  05_ユーザー価値課題.md  06_機能要件非機能要件.md  07_画面設計データ設計API設計.md  08_wireframe.html  09_UIコンポーネント_ユーザビリティ方針.md  10_技術スタック_アーキテクチャ.md  11_ユーザー権限設計.md  12_運用保守設計.md  13_その他要件.md  14_画面遷移図.md  15_状態遷移図.md  99_プロフィール管理拡張メモ.md  README.md  移動ルール.md
docs/1_CultivationDiary/detail_design/: 01_詳細設計計画書.md  02_hash_reliability_and_ack_design.md
docs/1_CultivationDiary/test/: 01_テスト計画書.md
investment/: analyze_farm.py  inspect_influx.py  pyproject.toml
server/frontend/docs/: 00_基本設計計画書.md  01_ペルソナ.md  02_ユースケース.md  03_カスタマージャーニー.md  04_ユーザー価値課題.md  05_機能要件非機能要件.md  06_画面設計データ設計API設計.md  08_UIコンポーネント_ユーザビリティ方針.md  12_その他要件.md  (+3 more)
server/image_viewer/: .gitignore  main.py  pyproject.toml  setup_https.sh
server/sensor_data_reciver/: .env.example  .gitignore  README.md  README_JA.md  __init__.py  app.py  app_original_backup.py  app_refactored.py  app_streaming.py  pyproject.toml
server/sensor_data_reciver/config/: __init__.py  settings.py
server/sensor_data_reciver/processors/: __init__.py  image_processor.py  sleep_controller.py  streaming_image_processor.py  voltage_processor.py
server/sensor_data_reciver/protocol/: __init__.py  constants.py  cycle_tracker.py  frame_parser.py  serial_handler.py  streaming_handler.py
server/sensor_data_reciver/storage/: __init__.py  influxdb_client.py
server/sensor_data_reciver/systemd/: README.md  README_JA.md  sensor_data_reciver.service
server/sensor_data_reciver/tests/: test_streaming_basic.py  test_streaming_processor.py
server/sensor_data_reciver/tests/integration/: test_serial_protocol.py  test_sleep_command.py
server/sensor_data_reciver/tests/unit/: test_cycle_tracker.py  test_data_parser.py  test_frame_parser.py  test_image_receiver.py  test_influxdb_client.py  test_sleep_command_unit.py  test_streaming_handler.py  test_systemd_template.py  test_voltage_data_processor.py
server/sensor_data_reciver/utils/: __init__.py  data_parser.py  logging_setup.py
server/usb_cdc_receiver/: .gitignore  Cargo.toml  IMPLEMENTATION_REPORT.md  PHASE2_IMPLEMENTATION_REPORT.md  README.md  TESTING_PLAN.md  build.rs  run_tests.sh  sdkconfig.defaults
server/usb_cdc_receiver/src/: command.rs  lib.rs  mac_address.rs  main.rs  main_streaming.rs  sleep_command_queue.rs
server/usb_cdc_receiver/src/esp_now/: frame.rs  message.rs  mod.rs  receiver.rs  sender.rs
server/usb_cdc_receiver/src/streaming/: buffer.rs  controller.rs  device_manager.rs  frame_processor.rs  mod.rs
server/usb_cdc_receiver/src/usb/: cdc.rs  mock.rs  mod.rs
server/usb_cdc_receiver/tests/: command_parser_test.rs  device_manager_test.rs  esp_now_frame_test.rs  mac_address_test.rs  usb_cdc_mock_test.rs
(+55 files in other folders)
