[package]
name = "ina226-power-monitor"
version = "0.1.0"
authors = ["FarmVerse"]
edition = "2021"
resolver = "2"
rust-version = "1.85"

[[bin]]
name = "ina226_power_monitor"
path = "src/main.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
anyhow = "1.0"
log = "0.4"
thiserror = "2.0.12"
toml-cfg = "=0.2"
embedded-hal = "1.0"
embedded-svc = "0.28"
esp-idf-sys = "0.36"
esp-idf-hal = "0.45.2"
esp-idf-svc = "0.51.0"
ina226 = { path = "crates/ina226" }
power-monitor-core = { path = "crates/power_monitor_core" }

[build-dependencies]
embuild = "0.33"
toml-cfg = "=0.2"
