[package]
name = "xiao-esp32s3-get-temperature"
version = "0.1.0"
authors = ["junkei_okinawa <ceazy.x2.okinawan@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "xiao_esp32s3_get_temperature"
path = "src/main.rs"

[lib]
name = "xiao_esp32s3_get_temperature"
path = "src/lib.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
wifi = []

# ホスト (テスト用) で必要な依存のみ
[dependencies]
log = "0.4"
anyhow = "1.0"

# ESP32 ターゲット専用の依存 (ホストテスト時はコンパイル対象外)
[target.'cfg(any(target_arch = "riscv32", target_arch = "xtensa"))'.dependencies]
simple_ds18b20_temp_sensor = { git = "https://github.com/junkei-okinawa/esp-temp-sensor", rev = "be8e7e2eb090835f15d99a1d035208c01c267dbc" }
esp-idf-svc = "0.51.0"
esp-idf-sys = "0.36"
toml-cfg = "=0.2"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
toml-cfg = "=0.2"
