[package]
name = "usb_cdc_receiver"
version = "0.2.0"
authors = ["junkei-okinawa"]
edition = "2021"
resolver = "2"
rust-version = "1.85"

[[bin]]
name = "usb_cdc_receiver"
path = "src/main.rs"
required-features = ["esp"]

[lib]
name = "usb_cdc_receiver"
path = "src/lib.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"

# ESP-IDF依存は"esp"フィーチャーでのみ有効化
esp-idf-svc = { version = "0.51", default-features = false, features = [
    "binstart",
    "std",
    "experimental",
    "alloc",
], optional = true }
embedded-svc = { version = "0.28", optional = true }
esp-idf-hal = { version = "0.45", optional = true }
heapless = { version = "=0.8.0", optional = true }
esp-idf-sys = { version = "0.36.1", features = ["binstart"], optional = true }
toml-cfg = { version = "=0.2", optional = true }

[features]
default = ["esp"]
esp = [
    "esp-idf-svc",
    "embedded-svc",
    "esp-idf-hal",
    "heapless",
    "esp-idf-sys",
    "toml-cfg",
    "embuild",
]

[build-dependencies]
embuild = { version = "0.33", optional = true }
toml-cfg = "=0.2"

[package.metadata.espflash]
partition_table = "../partitions.csv"
